Fixes side scrolling issue on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
-    overflow: auto;
+    overflow: hidden auto;
     scroll-behavior: smooth;
     -ms-overflow-style: none; /* Hide scrollbar for IE and Edge */
     scrollbar-width: none; /* Hide scrollbar for Firefox */
